--- a/B.Slipalison.ServiceBusMasstransit/appsettings.json
+++ b/B.Slipalison.ServiceBusMasstransit/appsettings.json
@@ -5,5 +5,38 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Enrich": [
+      "FromLogContext",
+      "WithExceptionDetails",
+      "WithMachineName",
+      "WithThreadName",
+      "WithThreadId",
+      "WithProcessName",
+      "WithProcessId"
+    ],
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Properties": {
+      "Application": "Bitstamp",
+      "Tribe": "Tarefas"
+    },
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Elasticsearch.ElasticsearchJsonFormatter,Serilog.Formatting.Elasticsearch"
+        }
+      }
+    ]
+  }
 }
