--- a/B.Slipalison.ServiceBusMasstransit/B.Slipalison.ServiceBusMasstransit.csproj
+++ b/B.Slipalison.ServiceBusMasstransit/B.Slipalison.ServiceBusMasstransit.csproj
@@ -1,17 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationInsightsResourceId>/subscriptions/1b3b1980-936e-4ccd-b453-8d241e75faa9/resourceGroups/Testes/providers/microsoft.insights/components/Insights-Teste</ApplicationInsightsResourceId>
+    <UserSecretsId>bc53988b-5235-473b-9a36-ec52bea9113c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.0.16" />
-    <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
     <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.0.16" />
     <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.0.16" />
-    <PackageReference Include="MassTransit.SerilogIntegration" Version="5.5.6" />
+    <!--<PackageReference Include="MassTransit.SerilogIntegration" Version="5.5.6" />-->
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.7">
       <PrivateAssets>all</PrivateAssets>
@@ -32,6 +33,11 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
   </ItemGroup>
 
 </Project>
