--- a/B.Slipalison.ServiceBusMasstransit/appsettings.json
+++ b/B.Slipalison.ServiceBusMasstransit/appsettings.json
@@ -1,7 +1,13 @@
 {
   "Logging": {
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Debug",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -38,5 +44,8 @@
         }
       }
     ]
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=40ffb7b2-c3ca-4f39-8727-c844a4a9a692;IngestionEndpoint=https://brazilsouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://brazilsouth.livediagnostics.monitor.azure.com/"
   }
 }
